-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.7.0, Qt Creator 4.10.0-beta2
-
-
0087bd492f (qt-creator/qt-creator/8.0) 0087bd492f (qt-creator/qt-creator/master) 0087bd492f (qt-creator/qt-creator/qds-3.6) 0087bd492f (qt-creator/qt-creator/9.0)
connect(this->txtOutDir, SIGNAL(textEdited(QString)), this, SLOT(txtOutDirChanged()));
The autocomplete does not work when trying to complete in SIGNAL and SLOT declarations.
connect(this->txtOutDir, SIGNAL(textE...ctrl+space), this, SLOT(txtOu...ctrl+space)); //nothing happens.
I tested this in qt creator 4.6.2 and it works fine there.
[Edit aha_1980: The reason for this behavior is, that Creator 4.7 and higher by default enables the Clang Code Model. Currently the only way to still get code completion for the macro-based SIGNAL and SLOT connection, Clang can be disabled in Help > About Plugins > Clang Code Model]
- is duplicated by
-
QTCREATORBUG-20835 bug lors de de l'affichage des suggestions des SIGNALS d'une QAction*
-
- Closed
-
-
QTCREATORBUG-21395 Auto complete is a total mess for SIGNAL and SLOT since 4.7.0
-
- Closed
-
-
QTCREATORBUG-21652 Bug in QT 5.12 and 5.11.2 Auto complete (Suggestion)
-
- Closed
-
-
QTCREATORBUG-22158 QtCreator does not suggest available signals and slots in connect statement
-
- Closed
-
-
QTCREATORBUG-23371 In connect statement, SIGNAL is not showing the list of available signals of source object.
-
- Closed
-
-
QTCREATORBUG-19304 Cannot list signals and slots in "connect" statements
-
- Closed
-
-
QTCREATORBUG-7582 two problem in qt creator in debug panel and editor
-
- Closed
-
- relates to
-
QTCREATORBUG-20717 "Follow symbol under cursor" doesn't work with functions that begin with underscores
-
- Closed
-
-
QTCREATORBUG-20840 Provide better code completion for new-style connection
-
- Closed
-
-
QTCREATORBUG-1863 Find usages does not work as expected from within the SIGNAL macro
-
- Closed
-
- replaces
-
QTCREATORBUG-14421 Restore signal/slot completion
-
- Closed
-
- resulted in
-
QTCREATORBUG-13558 autocomplete signal / slot does not work for connect Qt5 style
-
- Closed
-