src/plugins/cppeditor/cppquickfixassistant.h
@@ -56,6 +56,7 @@ public:
 
     bool isCursorOn(unsigned tokenIndex) const;
     bool isCursorOn(const CPlusPlus::AST *ast) const;
+    bool isBaseObject() const override { return false; }
 
 private:
     CppEditorWidget *m_editor;
